src/components/Portfolio/Portfolio.css
.portfolio-component {
  height: 90%;
  overflow: auto;
}

.portfolio-component * {
  color: rgb(70, 70, 70);
}

.portfolio-component .project-flex-item-intro *,
.project-flex-item-content * {
  font-family: 'Noto Sans', sans-serif;
}

.project-group {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-evenly;
}

.portfolio-container {
  display: flex;
  flex-direction: column;
  height: 90%;
  justify-content: space-around;
}

.projects-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin: auto;
}

.project-wrapper {
  display: flex;
  flex-direction: column;
  margin: 1rem;
  width: 80%;
  border: 1px solid black;
  border-radius: 12px;
  background: rgba(80, 80, 80, .1);
}

.project-wrapper a {
  color: rgba(50, 50, 50, 1)
}

.project-overlay {
  height: 100%;
  border-radius: 12px;
}

.project-center {
  display: flex;
  flex-direction: column;
}

.project-center>h3 {
  flex: 1 1;
  padding: 1rem;
  margin: 0;
}

.project-center>p {
  margin: 0;
  padding: 1rem 1.5rem;
}

.project-technology-icons {
  display: flex;
  justify-content: space-evenly;
  font-size: 20px;
  padding: 0 30px 10px 30px;
}

.project-technology-icons>i {
  font-size: 35px;
}

.project-links {
  display: flex;
  justify-content: flex-end;
  padding: 1rem 1.5rem;
}

.project-links>a {
  background: rgba(50, 50, 50, .8);
  text-decoration: none;
  margin: 0 2rem;
  transition: .5s;
  color: rgba(240, 240, 240, 1);
  padding: 2%;
  border-radius: 2px;
}

.project-links>a:hover {
  color: rgb(225, 130, 80);
}

.project-introduction>h5 {
  margin-top: 5px;
  margin-bottom: 35px;
}

.project-introduction>h3 {
  font-size: 25px;
  margin-bottom: 2px;
}

.project-introduction>* {
  text-align: left;
  padding-left: 4%;
}

.project-content {
  padding: 0 2%;
  text-align: left;
}

.project-content>ul {
  list-style-type: circle;
}

.project-content>p {
  font-size: 15px;
  width: 500px;
  padding-left: 2%;
  margin-bottom: 35px;
}

.project-flex-container {
  display: flex;
  padding: 0 2%;
}

.project-flex-item-intro {
  flex: 1;
  padding-top: 2%;
}

.project-flex-item-content {
  flex: 8;
}

.project-flex-item-technologies {
  flex: 1;
  border-left: 1px solid gray;
}

.project-flex-item-technologies>ul {
  list-style: none;
  font-size: 25px;
  padding-top: 40px;
  padding-left: 0;
}

.project-flex-item-technologies>ul>li {
  padding-top: 20px;
}

.pitch-title {
  font-size: 18px;
}

.project-details {
  width: 500px;
}

.pitch {
  padding-top: 5px;
}

.pitch-contact {
  font-size: 15px;
  font-weight: 200;
}

.pitch-contact>a {
  text-decoration: none;
}

.pitch-tech {
  color: rgba(220, 220, 220, 0)
}

.click-contact {
  cursor: pointer;
  color: rgba(220, 220, 220, 1);
  background: rgba(50, 50, 50, 1);
  border-radius: 3px;
  padding: 1%;
  transition: .5s;
}

.click-contact:hover {
  color: rgb(90, 150, 190);
}

.project-details>li {
  font-size: 12px;
}

.project-image {
  height: 200px;
}

/* Project-Timeline */

.project-timeline {
  border-right: 1px solid gray;
  text-align: right;
}

/* .project-date::after {
  display: inline-block;
  content: " ";
  margin-bottom: 3px;
  height: 5px;
  width: 5px;
  background: rgb(225, 130, 80);
} */

@media (max-width: 1100px) {
  .project-content>* {
    width: 80%;
  }
  .project-content>p {
    width: 80%;
  }
  .project-image {
    height: auto;
    width: 300px;
  }
}

